--- a/Virtual Keyboard/style.css
+++ b/Virtual Keyboard/style.css
@@ -30,6 +30,8 @@ body{
      border: 1px solid rgb(113, 113, 109);
      border-radius: 10px;
      padding: 15px 10px 10px 10px;
+     width: 880px;
+    
   }
   
   .text{
@@ -73,6 +75,7 @@ body{
   .Enter{
       width: 117px;
   }
+  
   .Tab,
   .Delete{
       width: 60px;
